changes homepage layout closes #94

--- a/keyflow/productionfiles/style.css
+++ b/keyflow/productionfiles/style.css
@@ -151,7 +151,7 @@ ul, ol, dl {
   flex: 1 1 calc(25% - 20px);
   max-width: 300px;          /* Limit maximum card size */
   box-sizing: border-box;    
-  background-color: #f9f9f9;
+  background-color:#f9f9f9;
   border: 1px solid #ddd;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -249,7 +249,23 @@ ul, ol, dl {
   color: #888;                     /* Lighter text color for less emphasis */
 }
 
-/* Style for Battlepass Rewards Header */
+.augie-header {
+  font-size: 2.5rem;                                
+  color: #640684;                   
+  text-transform: uppercase;        
+  letter-spacing: 2px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 10px 0;                  
+  text-align: center;               
+  background: linear-gradient(45deg, #9900CC, #FF99FF);  
+  border-radius: 8px;             
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);  
+  max-width: 90%;                  
+  margin-left: auto;                
+  margin-right: auto;     
+}
+
 .battlepass-header {
   font-size: 2.5rem;                
   font-weight: 700;                 
