--- a/keyflow/typetest/templates/battlepass.html
+++ b/keyflow/typetest/templates/battlepass.html
@@ -7,6 +7,7 @@
 {% block content %}
 <cardbody>
     <h2 class = battlepass-header>BattlePass Rewards</h2>
+    <a class = "augie-header" href = "https://readymag.website/u882732629/augustinportfolio/?fbclid=PAZXh0bgNhZW0CMTEAAaatFxc1r3gUUBh-HRVzwSlKpIP_yBnvfUcXF-1YI32snUoq2zEH84FrN3k_aem_ZmFrZWR1bW15MTZieXRlcw"><h3 class = "augie-header">Made by Augustín</h3></a>
     <div class="card-container">
         <div class="card-wrapper">
            <!-- Card slides container -->
