--- a/keyflow/typetest/static/style.css
+++ b/keyflow/typetest/static/style.css
@@ -268,5 +268,19 @@ ul, ol, dl {
   margin-right: auto;               
 }
 
+.augie-header{
+  font-size: 1.5rem;                                
+  color: #640684;                         
+  margin-top: 20px;
+  margin-bottom: 20px;
+  padding: 10px 0;                  
+  text-align: center;               
+  background: linear-gradient(45deg, #9900CC, #FF99FF);  
+  border-radius: 8px;             
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);  
+  max-width: 30%;                  
+  margin-left: auto;                
+  margin-right: auto; 
+}
 
 
