finished up battlepass and other things closes #97, closes #98, closes #99

--- a/keyflow/typetest/templates/battlepass.html
+++ b/keyflow/typetest/templates/battlepass.html
@@ -10,7 +10,7 @@
 {% block content %}
 <cardbody>
     <h2 class = battlepass-header>BattlePass Rewards</h2>
-    <a class = "augie-header" href = "https://readymag.website/u882732629/augustinportfolio/?fbclid=PAZXh0bgNhZW0CMTEAAaatFxc1r3gUUBh-HRVzwSlKpIP_yBnvfUcXF-1YI32snUoq2zEH84FrN3k_aem_ZmFrZWR1bW15MTZieXRlcw"><h3 class = "augie-header">Made by Augustín</h3></a>
+    <a class = "augie-header" href = "https://readymag.website/u882732629/augustinportfolio/?fbclid=PAZXh0bgNhZW0CMTEAAaatFxc1r3gUUBh-HRVzwSlKpIP_yBnvfUcXF-1YI32snUoq2zEH84FrN3k_aem_ZmFrZWR1bW15MTZieXRlcw"><h3 class = "augie-header">Art by Augustín</h3></a>
     <div class="card-container">
         <div class="card-wrapper">
            <!-- Card slides container -->
@@ -22,7 +22,7 @@
                         {% else %}
                             <img src="{% static 'images/level1grey.png' %}" alt="Card Image" class="card-image">
                         {%endif%}
-                        <p class="badge">Bunny Profile Photo</p>
+                        <p class="badge">Benson Profile Photo</p>
                         <h2 class="card-title">Level 1</h2>
                         <div class="card-details">
                             <p class="card-xp">XP Required: 200</p>
@@ -38,7 +38,7 @@
                         {% else %}
                             <img src="{% static 'images/level2grey.png' %}" alt="Card Image" class="card-image">
                         {%endif%}
-                        <p class="badge">Bunny Avatar</p>
+                        <p class="badge">Benson Avatar</p>
                         <h2 class="card-title">Level 2</h2>
                         <div class="card-details">
                             <p class="card-xp">XP Required: 300</p>
@@ -70,7 +70,7 @@
                         {% else %}
                             <img src="{% static 'images/level4grey.png' %}" alt="Card Image" class="card-image">
                         {%endif%}
-                        <p class="badge">Cat Profile Picture</p>
+                        <p class="badge">Cate Profile Picture</p>
                         <h2 class="card-title">Level 4</h2>
                         <div class="card-details">
                             <p class="card-xp">XP Required: 675</p>
@@ -86,7 +86,7 @@
                         {% else %}
                             <img src="{% static 'images/level5grey.png' %}" alt="Card Image" class="card-image">
                         {%endif%}
-                        <p class="badge">Cat Avatar</p>
+                        <p class="badge">Cate Avatar</p>
                         <h2 class="card-title">Level 5</h2>
                         <div class="card-details">
                             <p class="card-xp">XP Required: 1000</p>
@@ -118,7 +118,7 @@
                         {% else %}
                             <img src="{% static 'images/level7grey.png' %}" alt="Card Image" class="card-image">
                         {%endif%}
-                        <p class="badge">Aligator Profile Photo</p>
+                        <p class="badge">Alex Profile Photo</p>
                         <h2 class="card-title">Level 7</h2>
                         <div class="card-details">
                             <p class="card-xp">XP Required: 2300</p>
@@ -133,7 +133,7 @@
                         {% else %}
                             <img src="{% static 'images/level8grey.png' %}" alt="Card Image" class="card-image">
                         {%endif%}
-                        <p class="badge">Aligator Avatar</p>
+                        <p class="badge">Alex Avatar</p>
                         <h2 class="card-title">Level 8</h2>
                         <div class="card-details">
                             <p class="card-xp">XP Required: 3400</p>
