--- a/keyflow/typetest/templates/profile.html
+++ b/keyflow/typetest/templates/profile.html
@@ -106,6 +106,12 @@
         margin-left: 20px;
     }
 
+    .pfp img {
+            width: 20vh;
+            height: 20vh;
+            object-fit: cover;
+        }
+
     .profile-actions button[type='submit'] {
       background-color: #9900CC;
       color: white;
