hides secret key and database info closes #100

--- a/keyflow/typetest/templates/index.html
+++ b/keyflow/typetest/templates/index.html
@@ -102,7 +102,7 @@
                 {%if user.is_authenticated%}
                     <a href="/battlepass/"><h2>BattlePass Progress</h2>
                     {% if user.battlePass == False %}
-                    <p>BattlePass made by Augustín</p>
+                    <p>BattlePass art made by Augustín</p>
                     <img id="bpimg" src="{% static 'level1.png' %}" alt="BattlePass Level" />
                     <p>Level One Reward</p>
                     </a>
@@ -113,7 +113,7 @@
                     {% endif %}
                 {%else%}
                     <a href="/battlepass/"><h2>BattlePass</h2>
-                    <p>BattlePass made by Augustín</p>
+                    <p>BattlePass art made by Augustín</p>
                     <p>Make an account TODAY to get the BattlePass</p>
                     <img id="bpimg" src="{% static 'images/level1.png' %}" alt="BattlePass Level" />
                     <p>Level One Reward</p>
